@@ -1,3 +1,8 @@
+2000-09-21  Hideyuki SHIRAI  <shirai@quickhack.net>
+
+	* emacs/mhc-mew.el (mhc-mew/schedule-foldermsg): Support Mew 1.95b58
+	or later.
+
 2000-08-29  Yuuichi Teranishi  <teranisi@quickhack.net>
 
 	* emacs/mhc-header.el (mhc-header-narrowing): Search for
